悠悠有品对照

--- a/pages/csgo_buff/index.html
+++ b/pages/csgo_buff/index.html
@@ -94,6 +94,9 @@
             box-shadow: 0 2px 0 0 rgba(216, 40, 119, 0.46);
             float: left;
         }
+        .left_0 .item_icon .item_icon_img > img {
+            max-width: 90px;
+        }
         .left_0 .item_icon .item_icon_price {
             height: calc(100% + 3px);
             width: 350px;
@@ -217,9 +220,12 @@
             某些功能可能需要您登录BUFF平台：<a style="color: #3a8ee6;" href="https://buff.163.com/" target="_blank">BUFF登录</a>
         </div>
         <div style="font-size: 12px;">共发现<span style="color: #eea20e">{{ " " + listDataInfo.total + " " }}</span>种饰品！</div>
-        <div style="font-size: 12px;">steam出售手续费15%、购买手续费5%.</div>
+<!--        <div style="font-size: 12px;">steam出售手续费15%、购买手续费5%.</div>
         <div style="font-size: 12px;">buff交易手续费2.5%、提现手续费1%.</div>
-        <div style="font-size: 12px; color: #cf9236">环亏损是指经过A->B->A过程后因A、B平台抽成导致的总亏损百分比.</div>
+        <div style="font-size: 12px; color: #cf9236">环亏损是指经过A->B->A过程后因A、B平台抽成导致的总亏损百分比.</div>-->
+        <el-input placeholder="请输入内容" v-model="query.search" class="input-with-select" size="mini" style="width: 200px;">
+            <el-button slot="append" icon="el-icon-search" @click="loadData()"></el-button>
+        </el-input>
         <div class="query" v-if="false">
             <el-menu mode="horizontal"
                     :default-active="0"
@@ -369,7 +375,7 @@
     new Vue({
         el: "#app",
         data: {
-            cookieStr: 'Device-Id=X7KopiOtSmdbQKTD3hVo; Locale-Supported=zh-Hans; game=csgo; remember_me=U1077048501|MrZh1Lwm8UxTpSC4urIm5lBI8RGeHuGt; session=1-8eaxlItIsbQnFJ6H31E_FPuvSTSvTRdrcS69qfO6R5Rq2029841389; inventory_fold_result_switch=on; csrf_token=ImQwMTY4N2M0N2U3ZjExYTc4YmI4MzFmMGM5OTNiZTQwM2MxZmRmOTci.GeKPTQ.i4Ds0zN3cDqtn3naxlNaWA3CFJs',
+            cookieStr: 'Device-Id=4DZnWgK23yzsNElFrquh; Locale-Supported=zh-Hans; game=csgo; qr_code_verify_ticket=e00PBeZef8670aef0b60f49282b27b810236; remember_me=U1077048501|3ArtEPuVaQWXFIRKMlE5ueVcf0uV6o9K; session=1-WK0ugri2hcduIPudRz-Y-PPK0UlLzuaQ8pPKvVmCU3S62029841389; csrf_token=IjA5ZDExZDFjMDhkMTg4MDA3ZDMzNjkxZWQxYmZmZDk5MTU3OTI0YzIi.GeWMCw.CkT9787FaUQSBkcWWM8ldEmXaNc',
 
             // 用户本金
             inputUserPrincipal: 1000,
@@ -625,6 +631,12 @@
                         internal_name: 'weapon_knife_butterfly',
                         type: 'csgo_type_knife',
                         localized_name : "蝴蝶刀",
+                        tag_color: '#4186d8'
+                    },
+                    weapon_knife_falchion: {
+                        internal_name: 'weapon_knife_falchion',
+                        type: 'csgo_type_knife',
+                        localized_name : "弯刀",
                         tag_color: '#4186d8'
                     },
                     weapon_knife_karambit: {
@@ -1405,22 +1417,30 @@
             async loadData() {
                 // document.cookie = this.cookieStr; // 修改本地cookie
                 let that = this
-                axios.get("https://buff.163.com/api/market/goods", {
-                    // headers: { "cookie": that.cookieStr },
-                    params: {
-                        game: 'csgo',
-                        page_num: 1,
-                        tab: 'sellin',
-                        use_suggestion: 0,
-                        _: new Date().getTime(),
+                const params =  {
+                    game: 'csgo',
+                    page_num: 1,
+                    tab: 'sellin',
+                    use_suggestion: 0,
+                    _: new Date().getTime(),
 
-                        page_size: 80,     // 最大80
-                        // search: 'ak',
-                        fold: true,
-                        // quality: '',
-                        // rarity: ''
-                    }
+                    page_size: 80,     // 最大80
+                    // search: 'ak',
+                    fold: true,
+                    // quality: '',
+                    // rarity: ''
+                }
+                if (this.query.search) {
+                    params.search = this.query.search
+                }
+                axios.get("https://buff.163.com/api/market/goods", {
+                    withCredentials: true,
+                    headers:{
+                        Cookie: this.cookieStr
+                    },
+                    params: params,
                 }).then(await function (res) {
+
                     if (res.data && res.data["code"] === "OK") {
                         const itemData = res.data["data"]
                         if (itemData) {
@@ -1430,9 +1450,11 @@
                             const list = that.handlerListData(dataList)
                             that.listData = that.handlerListDataSort(list)
                         }
+                    } else {
+                        that.$message.error(res.data["error"])
                     }
                 }).catch(err => {
-
+                    that.$message.error(err)
                 })
             },
 
@@ -1458,7 +1480,6 @@
                         const itemData = res.data["data"]
                         if (itemData) {
                             that.listSellData = that.handlerSellListData(itemData.items, useItem)
-
                         }
                     }
                 })
@@ -1469,6 +1490,18 @@
             openURL(steam_market_url){
                 window.open(steam_market_url);
             },
+
+
+            // 获得登录验证码
+            loginCode(){
+                // https://buff.163.com/account/urs_sms
+                /*
+                {
+                  "mobile": "17633617036",
+                  "fingerprint": "158a919d9083df5eb0fced61231dbc45"
+                }
+                 */
+            }
 
 
 
