--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@
         })
     </script>
     <!-- 备案信息 -->
-    <div class="web-info" style="width: 100%; height: 35px; background-color: #fff;">
+   <!-- <div class="web-info" style="width: 100%; height: 35px; background-color: #fff;">
         <a class="text-color" href="https://beian.miit.gov.cn" target="_blank">
             <div style="display: flex;">
                 <img style="justify-content: center;width: 16px;margin-right: 3px;" src="source/imgs/gxb_favicon.png" alt=""/>
                 <span style="justify-content: center;height: 18px;">豫ICP备2023005798号</span>
             </div>
         </a>
-    </div>
+    </div>-->
 
 </body>
 
