--- a/pages/player/index.html
+++ b/pages/player/index.html
@@ -12,17 +12,29 @@
     <title>音乐播放器</title>
     <link rel="stylesheet" href="./use/player.css"/>
     <link rel="stylesheet" href="./use/playermobile.css"/>
+    <link rel="stylesheet" href="./use/bg.css"/>
+
 </head>
 <body>
   <div id="app">
+      <!--背景-->
+      <svg width="380px" height="500px" viewBox="0 0 837 1045" xmlns="http://www.w3.org/2000/svg">
+          <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+              <path id="Polygon-1" stroke="#007FB2" stroke-width="6" d="M353,9 L626.664028,170 L626.664028,487 L353,642 L79.3359724,487 L79.3359724,170 L353,9 Z"/>
+              <path id="Polygon-2" stroke="#EF4A5B" stroke-width="6" d="M78.5,529 L147,569.186414 L147,648.311216 L78.5,687 L10,648.311216 L10,569.186414 L78.5,529 Z"/>
+              <path id="Polygon-3" stroke="#795D9C" stroke-width="6" d="M773,186 L827,217.538705 L827,279.636651 L773,310 L719,279.636651 L719,217.538705 L773,186 Z"/>
+              <path id="Polygon-4" stroke="#F2773F" stroke-width="6" d="M639,529 L773,607.846761 L773,763.091627 L639,839 L505,763.091627 L505,607.846761 L639,529 Z"/>
+              <path id="Polygon-5" stroke="#36B455" stroke-width="6" d="M281,801 L383,861.025276 L383,979.21169 L281,1037 L179,979.21169 L179,861.025276 L281,801 Z"/>
+          </g>
+      </svg>
+
+      <!--播放器-->
       <player></player>
-      <icon icon="el-icon-zoom-in"></icon>
 
   </div>
 
   <script src="./use/api.js"></script>
   <script src="./use/player_index.js"></script>
-  <script src="../gpt/components/icon.js"></script>
   <script type="text/javascript">
     new Vue({el:"#app",
 
